--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ a:hover {
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: helvetica, arial, sans-serif;
     line-height: 1.5;
     margin: 0;
 }
@@ -29,7 +29,7 @@ figure {
 }
 
 footer {
-    background-color: #eaf7fe;
+    background-color: #b33d6a;
     font-size: .9em;
     margin-top: 4em;
     padding-bottom: 1.11em;
@@ -82,19 +82,6 @@ ol, ul {
 }
 .blog-sidebar p {
     margin: 0;
-}
-
-.button {
-    background-color: #ed6c69;
-    border-radius: .25em;
-    color: #ffffff;
-    padding: .5em;
-    padding-left: .75em;
-    padding-right: .75em;
-}
-.button:hover {
-    background-color: #f2807e;
-    color: #ffffff;
 }
 
 .centered {
