--- a/style.css
+++ b/style.css
@@ -2,15 +2,23 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: 'euclid_circular_asemibold';
+    src: url('assets/Fonts/euclid_circular_a_semibold-webfont.woff2') format('woff2'),
+         url('assets/Fonts/euclid_circular_a_semibold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
 /*****************************
             TAGS
 ******************************/
 a {
-    color: #4f6f80;
+    color: #000000;
     text-decoration: none;
 }
 a:hover {
-    color: #7ebddf;
+    color: rgb(112, 112, 112);
 }
 
 body {
@@ -29,8 +37,8 @@ figure {
 }
 
 footer {
-    background-color: #b33d6a;
-    font-size: .9em;
+    background-color: #f15751;
+    font-size: 1em;
     margin-top: 4em;
     padding-bottom: 1.11em;
     padding-top: 1.11em;
@@ -43,46 +51,6 @@ ol, ul {
 /*****************************
             CLASSES
 ******************************/
-
-.blog-item {
-    margin-bottom: 2em;
-}
-.blog-item h2 {
-    margin-bottom: .5em;
-}
-.blog-item p {
-    margin: 1em 0;
-}
-.blog-item .read-more {
-    display: block;
-    text-align: right;
-}
-
-.blog-post header {
-    text-align: center;
-    margin-top: 4em;
-}
-.blog-post .category {
-    text-transform: uppercase;
-}
-.blog-post .image {
-    margin-bottom: 2em;
-    margin-top: 2em;
-}
-.blog-post .subtitle {
-    margin-top: 2em;
-}
-.blog-post .title {
-    text-transform: capitalize;
-}
-
-.blog-sidebar h4 {
-    text-transform: uppercase;
-    margin: 1em 0 .25em;
-}
-.blog-sidebar p {
-    margin: 0;
-}
 
 .centered {
     text-align: center;
@@ -161,48 +129,36 @@ ol, ul {
     text-align: center;
 }
 
-.jumbotron {
-    background-image: url(assets/bacon-nuggets.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 30em;
-    margin-bottom: 2em;
-    position: relative;
-}
-.jumbotron h1 {
-    background-color: #ffffff;
-    bottom: 0;
-    margin: .5em;
-    padding: .25em .5em;
-    position: absolute;
-}
-
 .navbar {
     border-bottom: 1px solid #d1d3d5;
     padding: .5em;
+    font-family: euclid_circular_asemibold, helvetica;
+    font-size: 1.2em;
 }
-.navbar .container {
+.navbar .container{
     align-items: center;
     display: flex;
     justify-content: space-between;
+    color: #e2bd34;
+}
+
+.navbar img{
+    max-width: 100%;
+    height: 3.5em;
 }
 
 .navbar-nav {
     display: flex;
     list-style: none;
     padding: 0;
+    justify-content: center;
+    
 }
+
 .navbar-nav li {
     padding: .5em;
     margin-left: .5em;
     margin-right: .5em;
-}
-
-.rounded-image img {
-    border-radius: 8px;
-    display: block;
-    width: 100%;
 }
 
 .separator {
@@ -211,29 +167,4 @@ ol, ul {
 
 .summary li {
     margin-top: 1em;
-}
-
-.trending-list {
-    counter-reset: trending;
-    list-style: none;
-}
-.trending-list li {
-    counter-increment: trending;
-    position: relative;
-    margin-bottom: 1.5em;
-}
-.trending-list li::before {
-    color: #a1a3a5;
-    display: block;
-    position: absolute;
-    content: counter(trending);
-    font-size: 1.5em;
-    font-weight: bold;
-    left: -1.25em;
-}
-.trending-list a {
-    color: #000000;
-}
-.trending-list h4 {
-    text-transform: none;
 }
