--- a/style.css
+++ b/style.css
@@ -118,6 +118,16 @@ ol, ul {
     margin-right: auto;
 }
 
+.img6 {
+    height: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
+    border-radius: 1em;
+}
+
 .padding0 {
     padding: 0%;
 }
