--- a/style.css
+++ b/style.css
@@ -128,6 +128,11 @@ ol, ul {
     border-radius: 1em;
 }
 
+.img7 {
+    width: 100%;
+    border-radius: 1em;
+}
+
 .padding0 {
     padding: 0%;
 }
