--- a/style.css
+++ b/style.css
@@ -134,6 +134,12 @@ ol, ul {
     border-radius: 1em;
 }
 
+.img8 {
+    width: 50px;
+    display: block;
+    border-radius: 50px;
+}
+
 .padding0 {
     padding: 0%;
 }
